2006-06-07  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b17)

	* Added the ability for the screensaver to get its config
	  data from a URL.
	* Tweaked SaverBeans to make the settings interface more
	  Windows-like.

2006-04-27  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b16)

	* Added a ScreenSaver based on GR, using SaverBeans
	  <https://jdic.dev.java.net/documentation/incubator/screensaver/>
	* Reorganized some of the slideshow code to allow the
	  screensaver.
	* Implemented word-wrapping for captions in the slideshow.

2006-02-28  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b15)

	* Better handling of variable applet size.

2006-02-27  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b14)

	* GR will no longer perform HTML entities escaping when uploading
	  to G2.
	* Fixed DHTML during and after upload with mini applet in G2.

2006-02-26  Alan Harder (1.5.1-b13)

	* Localization fixes for applets:
	  New gr_locale applet parameter for specifying locale
	  Include resource bundles in the AppletMini jar
	  Add GRI18n.getString for two untranslatable strings
	* Implemented showAppletResize property (it is supposed to hide
	  this checkbox when false, but there was no code to do this)

2006-02-20  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b12)

	* Fixed auto charset support broken in b11.

2006-02-10  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b11)

	* Fixed EXIF handling broken in b10
	* Allows forcing the encoding when connecting to a G1 server.
	  Add forceProtocolEncoding.n=encoding in the GR preferences,
	  where n is associated with your Gallery URL and encoding
	  is the standard name of the encoding.

2006-01-16  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b10)

	* Also look for image caption in TAG_USER_COMMENT
	* Fixed cookie handling for cases where the path contains
	  a URL-encoded character (such as ~). Thanks acherrington.

2006-01-05  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b9)

	* Japanese translation by Yosuke Suzuki.