@@ -95,6 +95,9 @@ showThumbnails=true
 # Size of the thumbnails
 thumbnailSize=64,64
 
+# How long the transition between two images should be, in milliseconds (0 to disable transition)
+previewTransitionDuration=0
+
 #
 # --- Window sizes ---
 #
@@ -191,6 +194,9 @@ slideshowFontSize=
 
 # Slideshow font name (for example, arial)
 slideshowFontName=
+
+# How long the transition between two images should be, in milliseconds (0 to disable transition)
+slideshowTransitionDuration=0
 
 #
 # --- Applet ---
@@ -308,6 +314,6 @@ updateUrlBeta=http://gallery.sourceforge.net/gallery_remote_version_check_beta.p
 #
 # --- Do not edit below this line ---
 #
-version=1.5.1-b17
-releaseDate=2006/06/07
+version=1.5.1-b18
+releaseDate=2006/07/20
 aboutText=Gallery Remote\n \n \nA part of the Gallery Open-Source Project\nhttp://gallery.sourceforge.net\n \n \nMaintained by:\n \nPierre-Luc Paour\n \n \nInitial version by Chris Smith\n \n \nContributors:\n \nTim Miller\nDolan Halbrook\nMarkus Cozowicz\nScott Gartner\nAmedeo Paglione\nChris Schwerdt\nSeth Ladd\n \n \nArtwork by Ross A. Reyman\n \n \nBundled software:\n \nImageMagick\nJava look and feel Graphics Repository icons\njpegtran, Guido Vollbeding's version\nMetadataExtractor\nSaverBeans
